<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >
    
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/hello" />
	
	<Button
		android:id="@+id/buttonPlay1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/strplay1" />
	<Button
		android:id="@+id/buttonPlay2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/strplay2" />
	<Button
		android:id="@+id/buttonPlay3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/strplay3" />
	<Button
		android:id="@+id/buttonPlay4"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/strplay4" />
			
	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=""
		android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<Button
		android:id="@+id/buttonStop"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/strStop" />
</LinearLayout>


<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout>
 -->